kubernetes_off/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: fastapi
  name: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fastapi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/restaurant_finder: "true"
        io.kompose.service: fastapi
    spec:
      containers:
      - args:
        - uvicorn
        - app.main:app
        - --host
        - 0.0.0.0
        - --port
        - "8000"
        image: xfated/sg_food_finder:httpservicecors_v4
        imagePullPolicy: ""
        name: fastapi
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 0.25
            memory: "400Mi"
          limits:
            cpu: 0.25
            memory: "400Mi"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
