kubernetes_off/tfserving-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: tfserving
  name: tfserving
spec:
  ports:
  - name: "8501"
    port: 8501
    targetPort: 8501
  selector:
    io.kompose.service: tfserving
status:
  loadBalancer: {}
