kubernetes_off/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sg-food-finder-backend
    networking.gke.io/managed-certificates: ssl-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: fastapi
      port: 
        number: 8000
