kubernetes_off/restaurant_finder-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: foodfinder
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/restaurant_finder: "true"
  podSelector:
    matchLabels:
      io.kompose.network/restaurant_finder: "true"
